# gramgraph

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  generate_examples.sh
examples/: demographics.csv  financials.csv  financials_triple.csv  heatmap_data.csv  intervals.csv  measurements.csv  scales.csv  timeseries.csv  weather_hourly.csv
src/: compiler.rs  csv_reader.rs  data.rs  datetime.rs  graph.rs  ir.rs  lib.rs  main.rs  palette.rs  preprocessor.rs  resolve.rs  runtime.rs  scale.rs  theme_resolve.rs  transform.rs
src/parser/: aesthetics.rs  ast.rs  coord.rs  facet.rs  geom.rs  labels.rs  lexer.rs  mod.rs  pipeline.rs  scale.rs  theme.rs
test/: iris.csv  multiregion_sales.csv  simple_grouped.csv  stacked_data.csv
tests/: integration_tests.rs
