[package]
name = "gramgraph"
version = "0.1.0"
edition = "2021"

[lib]
name = "gramgraph"
path = "src/lib.rs"

[[bin]]
name = "gramgraph"
path = "src/main.rs"

[dependencies]
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
plotters = "0.3"
anyhow = "1.0"
chrono = "0.4"
image = "0.24"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
